[tool.poetry]
name = "name"
version = "0.1.0"
description = ""
authors = ["Masum Billal <proafxin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "package"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.19"
jinja2 = "^3.1.2"
mypy = "^1.4.1"


[tool.poetry.group.formatting.dependencies]
black = "^23.7.0"
ruff = "^0.0.282"
isort = "^5.12.0"

[tool.ruff]

src = ["models", "tests", 'services', "views"]

line-length = 100

select = [
  "E",
  "F",
  "B",
  "W",
  "Q",
  "UP",
  "I",
  "N",
  "I001",
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
# combine-as-imports = true
force-sort-within-sections = true
# lines-between-types = 2
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"
order-by-type = true
# section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]


[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pylint]
max-args = 10


[tool.mypy]
# files = ["bundled/tool", "tests"]
no_implicit_optional = true
check_untyped_defs = true




[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
